--- a/playbooks/configuration_template_version_create.yml
+++ b/playbooks/configuration_template_version_create.yml
@@ -1,39 +1,41 @@
 ---
-- name: Configuration Template Version Create
-  hosts: catalystcenter_servers
+- hosts: catalystcenter_servers
   vars_files:
     - credentials.yml
   gather_facts: false
   tasks:
     - name: Create Configuration Template Version
       cisco.catalystcenter.configuration_template_version_create:
-        _host: "{{ _host }}"
-        _username: "{{ _username }}"
-        _password: "{{ _password }}"
-        _verify: "{{ _verify }}"
-        _api_port: "{{ _api_port }}"
-        _version: "{{ _version }}"
-        _debug: "{{ _debug }}"
-         # comments: string
+        host: "{{ host }}"
+        username: "{{ username }}"
+        password: "{{ password }}"
+        verify: "{{ verify }}"
+        api_port: "{{ api_port }}"
+        version: "{{ version }}"
+        debug: "{{ debug }}"
+        # comments: string
         templateId: 2121f1d7-d9ea-4eea-8f83-45af2941f5f9
       register: configuration_template_version_create_result
+
     - name: Get task info
       cisco.catalystcenter.task_info:
-        _host: "{{ _host }}"
-        _username: "{{ _username }}"
-        _password: "{{ _password }}"
-        _verify: "{{ _verify }}"
+        host: "{{ host }}"
+        username: "{{ username }}"
+        password: "{{ password }}"
+        verify: "{{ verify }}"
         taskId: "{{ configuration_template_version_create_result.catalystcenter_response.response.taskId }}"
       when:
         - configuration_template_version_create_result.catalystcenter_response is defined
         - configuration_template_version_create_result.catalystcenter_response.response is defined
         - configuration_template_version_create_result.catalystcenter_response.response.taskId is defined
       register: task_result
+
     - name: Show new configuration_template_version
       ansible.builtin.debug:
         msg: "{{ configuration_template_version_create_result }}"
       when:
         - configuration_template_version_create_result is defined
+
     - name: Show retrieved task
       ansible.builtin.debug:
         msg: "{{ task_result.catalystcenter_response.response }}"
