--- a/playbooks/credentials.template
+++ b/playbooks/credentials.template
@@ -1,11 +1,11 @@
 ---
 _host: <A.B.C.D>
-_api_portport: 443
+_api_port: 443
 _username: <username>
 _password: <password>
 _version: 2.3.7.6
-_verify: false
-_debug: false
+_verify: False
+_debug: False
 log_level: [CRITICAL, ERROR, WARNING, INFO, DEBUG]
 log_file_path: <file_path>
-log_append: true
+log_append: True
