--- a/playbooks/user_role_workflow_manager.yml
+++ b/playbooks/user_role_workflow_manager.yml
@@ -4,34 +4,69 @@
   vars_files:
     - "credentials.yml"
   connection: local
-  gather_facts: false  # This space must be "no". It was set to false due to formatting errors.but the correct value is "no".
+  gather_facts: no
   tasks:
     - name: User and Role Workflow Manager
       cisco.catalystcenter.user_role_workflow_manager:
-        _host: "{{ _host }}"
-        _username: "{{ _username }}"
-        _password: "{{ _password }}"
-        _verify: "{{ _verify }}"
-        _api_port: "{{ _api_port }}"
-        _version: "{{ _version }}"
-        _debug: "{{ _debug }}"
-        log: true
+        host: "{{host}}"
+        username: "{{username}}"
+        password: "{{password}}"
+        verify: "{{verify}}"
+        api_port: "{{api_port}}"
+        version: "{{version}}"
+        debug: "{{debug}}"
+        log: True
         log_level: DEBUG
-        config_verify: true
+        config_verify: True
         catalystcenter_api_task_timeout: 1000
         catalystcenter_task_poll_interval: 1
         state: merged
         config:
           user_details:
-            - username: ajithandrewj
-              first_name: ajith
-              last_name: Andrew
-              email: ajith@gmail.com
-              password: Example@0101
-              password_update: true
-              role_list:
-                - Test_role_1
+            - first_name: "ajith"
+              last_name: "andrew"
+              username: "ajithandrewj"
+              email: "ajith.andrew@example.com"
+              password: "Ajith@123"
+              role_list: ["Super-Admin-role"]
+            - first_name: "syed"
+              last_name: "khadeer"
+              username: "syedkhadeer"
+              email: "syedkhadeer@example.com"
+              password: "Syedkhadeer@123"
           role_details:
-            - role_name: Test_role_1
+            - role_name: "Test_Role_1"
+              description: "Default role creation"
               assurance:
-                - overall: write
+                - overall: "read"
+                  troubleshooting_tools: "write"
+              network_analytics:
+                - overall: "deny"
+            - role_name: "Test_Role_2"
+              description: "Default role creation"
+              network_design:
+                - overall: "deny"
+                  image_repository: "read"
+              network_provision:
+                - overall: "read"
+                  eox: "write"
+                  image_update: "read"
+                  inventory_management:
+                    - overall: "write"
+                      port_management: "read"
+              network_services:
+                - overall: "deny"
+                  bonjour: "Write"
+              platform:
+                - overall: "deny"
+                  bundles: "read"
+              security:
+                - overall: "deny"
+                  ip_based_access_control: "read"
+                  security_advisories: "write"
+              system:
+                - overall: "deny"
+                  machine_reasoning: "write"
+              utilities:
+                - overall: "deny"
+                  audit_log: "read"
