--- a/playbooks/application_sets.yml
+++ b/playbooks/application_sets.yml
@@ -1,38 +1,40 @@
 ---
-- name: Application Sets
-  hosts: catalystcenter_servers
+- hosts: catalystcenter_servers
   vars_files:
     - credentials.yml
   gather_facts: false
   tasks:
     - name: Create an application set
       cisco.catalystcenter.application_sets:
-        _host: "{{ _host }}"
-        _username: "{{ _username }}"
-        _password: "{{ _password }}"
-        _verify: "{{ _verify }}"
-        _debug: "{{ _debug }}"
+        host: "{{ host }}"
+        username: "{{ username }}"
+        password: "{{ password }}"
+        verify: "{{ verify }}"
+        debug: "{{ debug }}"
         state: present
         payload:
           - name: AppSet1
       register: application_set_result
+
     - name: Get task info
       cisco.catalystcenter.task_info:
-        _host: "{{ _host }}"
-        _username: "{{ _username }}"
-        _password: "{{ _password }}"
-        _verify: "{{ _verify }}"
+        host: "{{ host }}"
+        username: "{{ username }}"
+        password: "{{ password }}"
+        verify: "{{ verify }}"
         taskId: "{{ application_set_result.catalystcenter_response.response.taskId }}"
       when:
         - application_set_result.catalystcenter_response is defined
         - application_set_result.catalystcenter_response.response is defined
         - application_set_result.catalystcenter_response.response.taskId is defined
       register: task_result
+
     - name: Show new application_set
       ansible.builtin.debug:
         msg: "{{ application_set_result }}"
       when:
         - application_set_result is defined
+
     - name: Show retrieved task
       ansible.builtin.debug:
         msg: "{{ task_result.catalystcenter_response.response }}"
