--- a/playbooks/authentication_import.yml
+++ b/playbooks/authentication_import.yml
@@ -1,20 +1,20 @@
 ---
-- name: Authentication Import
-  hosts: catalystcenter_servers
+- hosts: catalystcenter_servers
   vars_files:
     - credentials.yml
   gather_facts: false
   tasks:
     - name: Import certificate file
       cisco.catalystcenter.authentication_import_certificate:
-        _host: "{{ _host }}"
-        _username: "{{ _username }}"
-        _password: "{{ _password }}"
-        _verify: "{{ _verify }}"
-        _debug: "{{ _debug }}"
+        host: "{{ host }}"
+        username: "{{ username }}"
+        password: "{{ password }}"
+        verify: "{{ verify }}"
+        debug: "{{ debug }}"
         certFilePath: ./files/test.template
         pkFilePath: ./files/test.template
       register: result
+
     - name: Show result
       ansible.builtin.debug:
         msg: "{{ result }}"
