--- a/playbooks/device_provision_workflow.yml
+++ b/playbooks/device_provision_workflow.yml
@@ -2,54 +2,61 @@
 - name: Provision and Re-provision wired and wireless devices
   hosts: localhost
   connection: local
-  gather_facts: false  # This space must be "no". It was set to false due to formatting errors.but the correct value is "no".
+  gather_facts: no
+
   vars_files:
     - "{{ CLUSTERFILE }}"
+
   vars:
     catalystcenter_login: &catalystcenter_login
-      _host: "{{ _host }}"
-      _username: "{{ _username }}"
-      _password: "{{ _password }}"
-      _verify: "{{ _verify }}"
-      _api_port: "{{ _api_port }}"
-      _version: "{{ _version }}"
-      _debug: "{{ _debug }}"
+      host: "{{ host }}"
+      username: "{{ username }}"
+      password: "{{ password }}"
+      verify: "{{ verify }}"
+      api_port: "{{ api_port }}"
+      version: "{{ version }}"
+      debug: "{{ debug }}"
       log_level: "{{ log_level }}"
+
   tasks:
     - name: Assign a wired device to a site
       cisco.catalystcenter.provision_workflow_manager:
-        !!merge <<: *catalystcenter_login
-        log: true
+        <<: *catalystcenter_login
+        log: True
         state: merged
-        config_verify: true
+        config_verify: True
         config:
           - site_name_hierarchy: Global/USA/New York/NY_BLD1
+
             management_ip_address: 204.192.3.40
             provisioning: false
+
     - name: Provision a wired device to a site
       cisco.catalystcenter.provision_workflow_manager:
-        !!merge <<: *catalystcenter_login
-        log: true
+        <<: *catalystcenter_login
+        log: True
         log_level: DEBUG
         state: merged
-        config_verify: true
+        config_verify: True
         config:
           - site_name_hierarchy: Global/USA/SAN JOSE/BLD23/BLD20_FLOOR2
             management_ip_address: 204.192.3.40
+
     - name: Unprovision a wired device from a site
       cisco.catalystcenter.provision_workflow_manager:
-        !!merge <<: *catalystcenter_login
-        log: true
+        <<: *catalystcenter_login
+        log: True
         state: deleted
         config:
           - management_ip_address: 204.1.2.2
+
     - name: Provision a wireless device to a site
       cisco.catalystcenter.provision_workflow_manager:
-        !!merge <<: *catalystcenter_login
-        log: true
+        <<: *catalystcenter_login
+        log: True
         log_level: DEBUG
         state: merged
-        config_verify: true
+        config_verify: True
         config:
           - site_name_hierarchy: Global/USA/RTP/BLD11
             management_ip_address: 204.192.12.201
