--- a/playbooks/discovery_workflow_manager.yml
+++ b/playbooks/discovery_workflow_manager.yml
@@ -2,44 +2,48 @@
 - name: Discover devices using multiple discovery specific credentials and delete all the discoveries
   hosts: localhost
   connection: local
-  gather_facts: false  # This space must be "no". It was set to false due to formatting errors.but the correct value is "no".
+  gather_facts: no
+
   vars_files:
     - "{{ CLUSTERFILE }}"
+
   vars:
     catalystcenter_login: &catalystcenter_login
-      _host: "{{ _host }}"
-      _username: "{{ _username }}"
-      _password: "{{ _password }}"
-      _verify: "{{ _verify }}"
-      _api_port: "{{ _api_port }}"
-      _version: "{{ _version }}"
-      _debug: "{{ _debug }}"
-      log: true
+      host: "{{ host }}"
+      username: "{{ username }}"
+      password: "{{ password }}"
+      verify: "{{ verify }}"
+      api_port: "{{ api_port }}"
+      version: "{{ version }}"
+      debug: "{{ debug }}"
+      log: True
       log_level: DEBUG
+
   tasks:
+
     - name: Execute discovery devices using MULTI RANGE with various global credentials
       cisco.catalystcenter.discovery_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         state: merged
-        config_verify: true
+        config_verify: True
         config:
           - discovery_name: Multi_global
             discovery_type: MULTI RANGE
             ip_address_list:
-              - 204.1.2.1-204.1.2.5
-              - 204.192.3.40
-              - 204.192.4.200
-              - 204.1.2.6
-              - 204.1.2.7
-              - 204.1.2.8
-              - 204.1.2.9
-              - 204.1.2.10
-              - 204.1.2.11
+            - 204.1.2.1-204.1.2.5
+            - 204.192.3.40
+            - 204.192.4.200
+            - 204.1.2.6
+            - 204.1.2.7
+            - 204.1.2.8
+            - 204.1.2.9
+            - 204.1.2.10
+            - 204.1.2.11
             global_credentials:
               cli_credentials_list:
                 - description: ISE
                   username: cisco
-                - description: CLI1234  # Incorrect name passed
+                - description: CLI1234 #Incorrect name passed
                   username: cli
               http_read_credential_list:
                 - description: HTTP Read
@@ -48,11 +52,12 @@
                 - description: snmpV3
                   username: snmpV3
             protocol_order: ssh
+
     - name: Execute discovery of single device using various discovery specific credentials and all the global credentials
       cisco.catalystcenter.discovery_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         state: merged
-        config_verify: true
+        config_verify: True
         config:
           - discovery_name: Single IP Discovery
             discovery_type: "SINGLE"
@@ -60,14 +65,14 @@
               - 204.1.2.5
             discovery_specific_credentials:
               cli_credentials_list:
-                - username: cisco
-                  password: Cisco#123
-                  enable_password: Cisco#123
+              - username: cisco
+                password: Cisco#123
+                enable_password: Cisco#123
               http_read_credential:
                 username: string
                 password: Lablab#123
                 port: 443
-                secure: true
+                secure: True
               snmp_v2_read_credential:
                 desc: string
                 community: string
@@ -82,27 +87,28 @@
                 privacy_type: AES256
                 privacy_password: Lablab#1234
             protocol_order: ssh
+
     - name: Execute discovery of single device using various discovery specific credentials only
       cisco.catalystcenter.discovery_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         state: merged
-        config_verify: true
+        config_verify: True
         config:
           - discovery_name: Single without Global Credentials
             discovery_type: "SINGLE"
             ip_address_list:
               - 204.1.2.5
-            use_global_credentials: false
+            use_global_credentials: False
             discovery_specific_credentials:
               cli_credentials_list:
-                - username: cisco
-                  password: Cisco#123
-                  enable_password: Cisco#123
+              - username: cisco
+                password: Cisco#123
+                enable_password: Cisco#123
               http_read_credential:
                 username: string
                 password: Lablab#123
                 port: 443
-                secure: true
+                secure: True
               snmp_v2_read_credential:
                 desc: string
                 community: string
@@ -117,19 +123,20 @@
                 privacy_type: AES256
                 privacy_password: Lablab#1234
             protocol_order: ssh
+
     - name: Execute discovery devices using MULTI RANGE with various discovery specific credentials and all global credentials (max 5 allowed)
       cisco.catalystcenter.discovery_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         state: merged
-        config_verify: true
+        config_verify: True
         config:
           - discovery_type: "MULTI RANGE"
             discovery_name: Multi_range
             ip_address_list:
-              - 204.1.2.1-204.1.2.100  # It will be taken as 204.1.2.1 - 204.1.2.1
+              - 204.1.2.1-204.1.2.100 #It will be taken as 204.1.2.1 - 204.1.2.1
               - 205.2.1.1-205.2.1.10
             ip_filter_list:
-              - 204.1.2.5  # Devie with IP 204.1.2.5 won't be discovered
+              - 204.1.2.5 #Devie with IP 204.1.2.5 won't be discovered
             discovery_specific_credentials:
               cli_credentials_list:
                 - username: admin
@@ -139,7 +146,7 @@
                 username: admin
                 password: maglev123
                 port: 443
-                secure: true
+                secure: True
               snmp_v2_read_credential:
                 desc: new
                 community: password
@@ -154,34 +161,37 @@
             start_index: 1
             records_to_return: 1000
             snmp_version: v2
+
     - name: Execute discovery devices using CDP/LLDP/CIDR leveraging discovery specific credentials and all the global credentials
       cisco.catalystcenter.discovery_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         state: merged
-        config_verify: true
+        config_verify: True
         config:
           - discovery_name: CDP_Test_1
-            discovery_type: "CDP"  # Can be LLDP and CIDR
-            ip_address_list:  # List length should be one
+            discovery_type: "CDP" #Can be LLDP and CIDR
+            ip_address_list:   #List length should be one
               - 204.1.2.1
-            cdp_level: 2  # Instead use lldp_level for LLDP and prefix length for CIDR
+            cdp_level: 2 #Instead use lldp_level for LLDP and prefix length for CIDR
             discovery_specific_credentials:
               cli_credentials_list:
                 - username: admin
                   password: maglev123
                   enable_password: maglev123
             protocol_order: ssh
+
     - name: Execute deletion of single discovery from the dashboard
       cisco.catalystcenter.discovery_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         state: deleted
-        config_verify: true
+        config_verify: True
         config:
           - discovery_name: CDP_Test_1
+
     - name: Execute deletion of all the discoveries from the dashboard
       cisco.catalystcenter.discovery_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         state: deleted
-        config_verify: true
+        config_verify: True
         config:
-          - delete_all: true
+          - delete_all: True
