--- a/playbooks/global_credentials_info.yml
+++ b/playbooks/global_credentials_info.yml
@@ -1,38 +1,40 @@
 ---
-- name: Global credentials info
-  hosts: catalystcenter_servers
+- hosts: catalystcenter_servers
   vars_files:
     - credentials.yml
   gather_facts: false
   tasks:
     - name: Get all Global Credential by SubType
       cisco.catalystcenter.global_credential_info:
-        _host: "{{ _host }}"
-        _username: "{{ _username }}"
-        _password: "{{ _password }}"
-        _verify: "{{ _verify }}"
-        _api_port: "{{ _api_port }}"
-        _version: "{{ _version }}"
-        _debug: "{{ _debug }}"
+        host: "{{ host }}"
+        username: "{{ username }}"
+        password: "{{ password }}"
+        verify: "{{ verify }}"
+        api_port: "{{ api_port }}"
+        version: "{{ version }}"
+        debug: "{{ debug }}"
         credentialSubType: HTTP_READ
-         # sortBy:
-         # order:
+        # sortBy:
+        # order:
       register: global_credentials_result
+
     - name: Show global_credentials
       ansible.builtin.debug:
         msg: "{{ global_credentials_result }}"
+
     - name: Get Global Credential by id
       cisco.catalystcenter.global_credential_info:
-        _host: "{{ _host }}"
-        _username: "{{ _username }}"
-        _password: "{{ _password }}"
-        _verify: "{{ _verify }}"
-        _api_port: "{{ _api_port }}"
-        _version: "{{ _version }}"
-        _debug: "{{ _debug }}"
+        host: "{{ host }}"
+        username: "{{ username }}"
+        password: "{{ password }}"
+        verify: "{{ verify }}"
+        api_port: "{{ api_port }}"
+        version: "{{ version }}"
+        debug: "{{ debug }}"
         id: babc42b9-0bdd-49ef-912e-66f533fb5d59
         credentialSubType: HTTP_READ
       register: global_credential_result
+
     - name: Show global_credential
       ansible.builtin.debug:
         msg: "{{ global_credential_result }}"
