--- a/playbooks/global_pool.yml
+++ b/playbooks/global_pool.yml
@@ -1,20 +1,19 @@
 ---
-- name: Global Pool
-  hosts: catalystcenter_servers
+- hosts: catalystcenter_servers
   vars_files:
     - credentials.yml
   gather_facts: false
   tasks:
     - name: Find discovery
       cisco.catalystcenter.global_pool:
-        _host: "{{ _host }}"
-        _username: "{{ _username }}"
-        _password: "{{ _password }}"
-        _verify: "{{ _verify }}"
-        _version: "{{ _version }}"
-        _debug: "{{ _debug }}"
+        host: "{{ host }}"
+        username: "{{ username }}"
+        password: "{{ password }}"
+        verify: "{{ verify }}"
+        version: "{{ version }}"
+        debug: "{{ debug }}"
         state: present
-         # id: 1bf5ecf3-be14-48fb-b724-df801bc61172
+        # id: 1bf5ecf3-be14-48fb-b724-df801bc61172
         settings:
           ippool:
             - IpAddressSpace: string
