--- a/playbooks/import_image_file.yml
+++ b/playbooks/import_image_file.yml
@@ -1,22 +1,22 @@
 ---
-- name: Import image file
-  hosts: catalystcenter_servers
+- hosts: catalystcenter_servers
   vars_files:
     - credentials.yml
   gather_facts: false
   tasks:
     - name: Import image file
       cisco.catalystcenter.swim_import_local:
-        _host: "{{ _host }}"
-        _username: "{{ _username }}"
-        _password: "{{ _password }}"
-        _verify: "{{ _verify }}"
-        filePath: fullpath/playbooks/files/test.template  # string
-        isThirdParty: true  # boolean
-        thirdPartyApplicationType: SomeValue  # string
-        thirdPartyImageFamily: SomeValue  # string
-        thirdPartyVendor: SomeValue  # string
+        host: "{{ host }}"
+        username: "{{ username }}"
+        password: "{{ password }}"
+        verify: "{{ verify }}"
+        filePath: fullpath/playbooks/files/test.template # string
+        isThirdParty: true # boolean
+        thirdPartyApplicationType: SomeValue # string
+        thirdPartyImageFamily: SomeValue # string
+        thirdPartyVendor: SomeValue # string
       register: result
+
     - name: Show result
       ansible.builtin.debug:
         msg: "{{ result }}"
