--- a/playbooks/network_compliance_workflow_manager.yml
+++ b/playbooks/network_compliance_workflow_manager.yml
@@ -1,121 +1,151 @@
 ---
 - name: Testing
   hosts: catalystcenter_servers
-  gather_facts: false
+  gather_facts: no
+
   vars_files:
     - "credentials.yml"
+
   vars:
     catalystcenter_login: &catalystcenter_login
-      _host: "{{ _host }}"
-      _username: "{{ _username }}"
-      _password: "{{ _password }}"
-      _verify: "{{ _verify }}"
-      _api_port: "{{ _api_port }}"
-      _version: "{{ _version }}"
-      _debug: "{{ _debug }}"
+      host: "{{ host }}"
+      username: "{{ username }}"
+      password: "{{ password }}"
+      verify: "{{ verify }}"
+      api_port: "{{ api_port }}"
+      version: "{{ version }}"
+      debug: "{{ debug }}"
       log: true
       log_level: INFO
-      log_append: false
+      log_append: False
       config_verify: true
+
   tasks:
-    - name: Run Compliance check using IP address list (run_compliance by default is true)
+    - name: Run Compliance check using IP address list (run_compliance by default is True)
       cisco.catalystcenter.network_compliance_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         config:
-          - ip_address_list: ['204.1.2.2', '204.1.2.5', '204.1.2.4']
+        - ip_address_list: ['204.1.2.2', '204.1.2.5', '204.1.2.4']
+
     - name: Run Compliance check using IP address list
       cisco.catalystcenter.network_compliance_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         config:
-          - ip_address_list: ['204.1.2.2', '204.1.2.5', '204.1.2.4']
-            run_compliance: true
+        - ip_address_list: ['204.1.2.2', '204.1.2.5', '204.1.2.4']
+          run_compliance: True
+
+
     - name: Run Compliance check using Site
       cisco.catalystcenter.network_compliance_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         config:
           - site: "Global"
-            run_compliance: true
+            run_compliance: True
+
+
     - name: Run Compliance check using both IP address list and Site
       cisco.catalystcenter.network_compliance_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         config:
           - ip_address_list: ['204.1.2.2', '204.1.2.5', '204.1.2.4']
             site_name: "Global/USA/San Francisco/Building_1/floor_1"
-            run_compliance: true
+            run_compliance: True
+
+
     - name: Run Compliance check with specific categories using IP address list
       cisco.catalystcenter.network_compliance_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         config:
           - ip_address_list: ['204.1.2.2', '204.1.2.5', '204.1.2.4']
             run_compliance_categories: ['INTENT', 'RUNNING_CONFIG', 'IMAGE', 'PSIRT']
+
+
     - name: Run Compliance check with specific categories using Site
       cisco.catalystcenter.network_compliance_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         config:
           - site_name: "Global"
             run_compliance_categories: ['INTENT', 'RUNNING_CONFIG', 'IMAGE', 'PSIRT']
+
+
     - name: Run Compliance check with specific categories using both  IP address list and Site
       cisco.catalystcenter.network_compliance_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         config:
           - ip_address_list: ['204.1.2.2', '204.1.2.5', '204.1.2.4']
             site_name: "Global/USA/San Francisco/Building_1/floor_1"
             run_compliance_categories: ['INTENT', 'RUNNING_CONFIG', 'IMAGE', 'PSIRT']
+
+
     - name: Sync Device Configuration using IP address list
       cisco.catalystcenter.network_compliance_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         config:
           - ip_address_list: ['204.1.2.2', '204.1.2.5', '204.1.2.4']
-            run_compliance: false
-            sync_device_config: true
+            run_compliance: False
+            sync_device_config: True
+
+
     - name: Sync Device Configuration using Site
       cisco.catalystcenter.network_compliance_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         config:
           - site_name: "Global/USA/San Francisco/Building_1/floor_1"
-            run_compliance: false
-            sync_device_config: true
+            run_compliance: False
+            sync_device_config: True
+
+
     - name: Sync Device Configuration using both IP address list and Site
       cisco.catalystcenter.network_compliance_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         config:
           - ip_address_list: ['204.1.2.2', '204.1.2.5', '204.1.2.4']
             site_name: "Global/USA/San Francisco/Building_1/floor_1"
-            run_compliance: false
-            sync_device_config: true
+            run_compliance: False
+            sync_device_config: True
+
+
     - name: Run Compliance and Sync Device Configuration with IP address list
       cisco.catalystcenter.network_compliance_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         config:
           - ip_address_list: ['204.1.2.2', '204.1.2.5', '204.1.2.4']
-            run_compliance: true
-            sync_device_config: true
+            run_compliance: True
+            sync_device_config: True
+
+
     - name: Run Compliance and Sync Device Configuration with Site
       cisco.catalystcenter.network_compliance_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         config:
           - site_name: "Global/USA/San Francisco/Building_1/floor_1"
-            run_compliance: true
-            sync_device_config: true
+            run_compliance: True
+            sync_device_config: True
+
+
     - name: Run Compliance with specific categories and Sync Device Configuration with IP address list
       cisco.catalystcenter.network_compliance_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         config:
           - ip_address_list: ['204.1.2.2', '204.1.2.5', '204.1.2.4']
             run_compliance_categories: ['INTENT', 'RUNNING_CONFIG', 'IMAGE', 'PSIRT']
-            sync_device_config: true
+            sync_device_config: True
+
+
     - name: Run Compliance with specific categories and Sync Device Configuration with Site
       cisco.catalystcenter.network_compliance_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         config:
           - site_name: "Global/USA/San Francisco/Building_1/floor_1"
             run_compliance_categories: ['INTENT', 'RUNNING_CONFIG', 'IMAGE', 'PSIRT']
-            sync_device_config: true
+            sync_device_config: True
+
+
     - name: Run Compliance and Sync Device Configuration using both IP address list and Site
       cisco.catalystcenter.network_compliance_workflow_manager:
-        !!merge <<: *catalystcenter_login
+        <<: *catalystcenter_login
         config:
           - ip_address_list: ['204.1.2.2', '204.1.2.5', '204.1.2.4']
             site_name: "Global/USA/San Francisco/Building_1/floor_1"
-            run_compliance: true
-            sync_device_config: true
+            run_compliance: True
+            sync_device_config: True
