--- a/playbooks/pnp_device.yml
+++ b/playbooks/pnp_device.yml
@@ -1,45 +1,45 @@
 ---
-- name: Pnp device
-  hosts: catalystcenter_servers
+- hosts: catalystcenter_servers
   vars_files:
     - credentials.yml
   gather_facts: false
   tasks:
-     # - name: Delete by id
-     #   cisco.catalystcenter.pnp_device:
-     #     _host: "{{ _host }}"
-     #     _username: "{{ _username }}"
-     #     _password: "{{ _password }}"
-     #     _verify: "{{ _verify }}"
-     #     _api_port: "{{ _api_port }}"
-     #     _version: "{{ _version }}"
-     #     _debug: "{{ _debug }}"
-     #     state: absent
-     #     id: 5f96f83854ee220008a9c456
-     #   register: pnp_device_delete_result
+    # - name: Delete by id
+    #   cisco.catalystcenter.pnp_device:
+    #     host: "{{ host }}"
+    #     username: "{{ username }}"
+    #     password: "{{ password }}"
+    #     verify: "{{ verify }}"
+    #     api_port: "{{ api_port }}"
+    #     version: "{{ version }}"
+    #     debug: "{{ debug }}"
+    #     state: absent
+    #     id: 5f96f83854ee220008a9c456
+    #   register: pnp_device_delete_result
 
-     # - name: Show deleted pnp_device
-     #   debug:
-     #     msg: "{{ pnp_device_delete_result }}"
-     #   when:
-     #     - pnp_device_delete_result is defined
+    # - name: Show deleted pnp_device
+    #   debug:
+    #     msg: "{{ pnp_device_delete_result }}"
+    #   when:
+    #     - pnp_device_delete_result is defined
+
     - name: Adds or Updates a device to the PnP database
       cisco.catalystcenter.pnp_device:
-        _host: "{{ _host }}"
-        _username: "{{ _username }}"
-        _password: "{{ _password }}"
-        _verify: "{{ _verify }}"
-        _api_port: "{{ _api_port }}"
-        _version: "{{ _version }}"
-        _debug: "{{ _debug }}"
+        host: "{{ host }}"
+        username: "{{ username }}"
+        password: "{{ password }}"
+        verify: "{{ verify }}"
+        api_port: "{{ api_port }}"
+        version: "{{ version }}"
+        debug: "{{ debug }}"
         state: present
         version: 2
         deviceInfo:
           serialNumber: FOCTEST2
           name: FOCTEST2
           state: Unclaimed
-           # onbState: Not Contacted
-           # cmState: Not Contacted
+          # onbState: Not Contacted
+          # cmState: Not Contacted
           location: {}
           source: User
           reloadRequested: false
@@ -71,6 +71,7 @@
         tenantId: 5cdc6c45a8405f00c80c6ba3
         id: 610ab95c07a77b0fbec39f22
       register: pnp_device_result
+
     - name: Show new pnp_device
       ansible.builtin.debug:
         msg: "{{ pnp_device_result }}"
