--- a/playbooks/template_pnp_intent.yml
+++ b/playbooks/template_pnp_intent.yml
@@ -1,59 +1,61 @@
----
-- name: Template pnp intent
-  hosts: localhost
+- hosts: localhost
   vars_files:
     - credentials.yml
     - device_details.template
   gather_facts: false
   connection: local
   tasks:
-     # Project Info  Section
+#
+# Project Info  Section
+#
     - name: Test project template
       cisco.catalystcenter.template_intent:
-        _host: "{{ _host }}"
-        _api_port: "{{ _api_port }}"
-        _username: "{{ _username }}"
-        _password: "{{ _password }}"
-        _verify: "{{ _verify }}"
-        _debug: "{{ _debug }}"
+        host: "{{ host }}"
+        api_port: "{{ api_port }}"
+        username: "{{ username }}"
+        password: "{{ password }}"
+        verify: "{{ verify }}"
+        debug: "{{ debug }}"
         log: true
         state: "merged"
         config_verify: true
-         # ignore_errors: true        # Enable this to continue execution even the task fails
+        #ignore_errors: true        #Enable this to continue execution even the task fails
         config:
-          - configuration_templates:
-              project_name: "{{ item.proj_name }}"
-              template_name: "{{ item.temp_name }}"
-              template_content: "{{ item.device_config }}"
-              version_description: "{{ item.description }}"
-              language: "{{ item.language }}"
-              software_type: "{{ item.type }}"
-              software_variant: "{{ item.variant }}"
-              device_types:
-                - product_family: "{{ item.family }}"
+        - configuration_templates:
+            project_name: "{{ item.proj_name }}"
+            template_name: "{{ item.temp_name }}"
+            template_content: "{{ item.device_config }}"
+            version_description: "{{ item.description }}"
+            language: "{{ item.language }}"
+            software_type: "{{ item.type }}"
+            software_variant: "{{ item.variant }}"
+            device_types:
+            - product_family: "{{ item.family }}"
       register: template_result
       with_items: '{{ template_details }}'
       tags:
         - template
+
+
     - name: Create pnp
       cisco.catalystcenter.pnp_intent:
-        _host: "{{ _host }}"
-        _username: "{{ _username }}"
-        _password: "{{ _password }}"
-        _verify: "{{ _verify }}"
-        _api_port: "{{ _api_port }}"
-        _debug: "{{ _debug }}"
+        host: "{{host}}"
+        username: "{{username}}"
+        password: "{{password}}"
+        verify: "{{verify}}"
+        api_port: "{{api_port}}"
+        debug: "{{debug}}"
         log: true
         config:
-          - site_name: "{{ item.site_name }}"
-            project_name: "{{ item.proj_name }}"
-            template_name: "{{ item.temp_name }}"
-            image_name: "{{ item.image_name }}"
-            device_info:
-              - serial_number: "{{ item.device_number }}"
-                hostname: "{{ item.device_name }}"
-                state: "{{ item.device_state }}"
-                pid: "{{ item.device_id }}"
+        - site_name: "{{ item.site_name }}"
+          project_name: "{{ item.proj_name }}"
+          template_name: "{{ item.temp_name }}"
+          image_name: "{{ item.image_name }}"
+          device_info:
+            - serial_number: "{{ item.device_number }}"
+              hostname: "{{ item.device_name}}"
+              state: "{{ item.device_state }}"
+              pid: "{{ item.device_id }}"
       register: pnp_result
       with_items: '{{ device_details }}'
       tags:
