--- a/playbooks/test_swim_module.yml
+++ b/playbooks/test_swim_module.yml
@@ -1,41 +1,42 @@
 ---
-- name: Configure device credentials on Cisco DNA Center
+- name: Configure device credentials on Cisco CATALYST Center
   hosts: localhost
   connection: local
-  gather_facts: false  # This space must be "no". It was set to false due to formatting errors.but the correct value is "no".
+  gather_facts: no
   vars_files:
-    - "input_swim.yml"  # Contains image and device details
+    - "input_swim.yml" #Contains image and device details
     - "credentials.yml"
   tasks:
     - name: Import an image, tag it as golden and load it on device
       cisco.catalystcenter.swim_intent:
-        _host: "{{ _host }}"
-        _api_port: "{{ _api_port }}"
-        _username: "{{ _username }}"
-        _password: "{{ _password }}"
-        _verify: "{{ _verify }}"
-        _debug: "{{ _debug }}"
+        host: "{{ host }}"
+        api_port: "{{ api_port }}"
+        username: "{{ username }}"
+        password: "{{ password }}"
+        verify: "{{ verify }}"
+        debug: "{{ debug }}"
         log: true
         config:
-          - import_image_details:
-              type: "{{ item.type }}"
-              url_details:
-                payload: "{{ item.url_details.payload }}"
-            tagging_details:
-              device_role: "{{ item.device_role }}"
-              device_family_name: "{{ item.device_family_name }}"
-              device_type: "{{ item.device_type }}"
-              tagging: true
-            image_distribution_details:
-              site_name: "{{ item.site_name }}"
-              device_role: "{{ item.device_role }}"
-              device_family_name: "{{ item.device_family_name }}"
-            image_activation_details:
-              site_name: "{{ item.site_name }}"
-              device_role: "{{ item.device_role }}"
-              device_family_name: "{{ item.device_family_name }}"
-              scehdule_validate: false
-              distribute_if_needed: true
+        - import_image_details:
+            type: "{{ item.type }}"
+            url_details:
+              payload: "{{ item.url_details.payload }}"
+          tagging_details:
+            device_role: "{{ item.device_role }}"
+            device_family_name: "{{ item.device_family_name }}"
+            device_type: "{{item.device_type}}"
+            tagging: true
+          image_distribution_details:
+            site_name: "{{item.site_name}}"
+            device_role: "{{ item.device_role }}"
+            device_family_name: "{{ item.device_family_name }}"
+          image_activation_details:
+            site_name: "{{item.site_name}}"
+            device_role: "{{ item.device_role }}"
+            device_family_name: "{{ item.device_family_name }}"
+            scehdule_validate: false
+            distribute_if_needed: true
+
       with_items: '{{ image_details }}'
       tags:
         - swim
