Update playbooks to correct module names and standardize variable prefixes. Changed 'cisco.catalystcenter.network_device_custom_prompt_info' to 'cisco.catalystcenter.network_device_custom_prompt_info_info' and adjusted variable names to include underscores for consistency. Also, corrected 'cisco.catalystlyst.swim_workflow_manager' to 'cisco.catalyst.swim_workflow_manager' and updated related parameters for clarity.

--- a/playbooks/network_device_custom_prompt_info.yml
+++ b/playbooks/network_device_custom_prompt_info.yml
@@ -5,14 +5,14 @@
   gather_facts: false
   tasks:
     - name: Get all Network Device Custom Prompt
-      cisco.catalystcenter.network_device_custom_prompt_info:
-        host: "{{host}}"
-        username: "{{username}}"
-        password: "{{password}}"
-        verify: "{{verify}}"
-        api_port: "{{api_port}}"
-        version: "{{version}}"
-        debug: "{{debug}}"
+      cisco.catalystcenter.network_device_custom_prompt_info_info:
+        _host: "{{host}}"
+        _username: "{{username}}"
+        _password: "{{password}}"
+        _verify: "{{verify}}"
+        _api_port: "{{api_port}}"
+        _version: "{{version}}"
+        _debug: "{{debug}}"
       register: network_device_custom_prompt_result
 
     - name: Show all network_device_custom_prompt
