Update swim_workflow_manager module name for consistency in playbooks

--- a/playbooks/swim_workflow_manager.yml
+++ b/playbooks/swim_workflow_manager.yml
@@ -8,7 +8,7 @@
     - "credentials.yml"
   tasks:
     - name: Import an image, tag it as golden and load it on device
-      cisco.catalyst.swim_workflow_manager:
+      cisco.catalystcenter.swim_workflow_manager:
         host: "{{host}}"
         username: "{{username}}"
         password: "{{password}}"
